predictors: Remove several new statements and raw pointer usages

There is a crash registered in AutocompleteActionPredictorTable::GetAllRows
probably due to null pointer access. Culprit object is created with raw
new that may be dangerous. This CL removes this and several other usages
of a new statement in c/b/predictors.

Bug: 771616
Change-Id: I30e87b470e623166d03c27694f232a5033b143bf