chrome/browser/predictors/preconnect_manager_unittest.cc
@@ -74,7 +74,7 @@ class PreconnectManagerTest : public testing::Test {
 PreconnectManagerTest::PreconnectManagerTest()
     : mock_delegate_(
           base::MakeUnique<StrictMock<MockPreconnectManagerDelegate>>()),
-      context_getter_(new net::TestURLRequestContextGetter(
+      context_getter_(base::MakeRefCounted<net::TestURLRequestContextGetter>(
           base::ThreadTaskRunnerHandle::Get())),
       preconnect_manager_(base::MakeUnique<StrictMock<MockPreconnectManager>>(
           mock_delegate_->AsWeakPtr(),
